dtrack/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dtrack
  labels:
    app.kubernetes.io/managed-by: argocd
