dtrack/base/ingress-dtrack.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dtrack
  labels:
    app.kubernetes.io/name: dependency-track
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - dtrack.local
      secretName: dtrack-tls

  rules:
    - host: dtrack.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: security-dependency-track-api-server
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: security-dependency-track-frontend
                port:
                  number: 8080
